Fix incorrect banner cropping in client-side banner preview.

--- a/src/client/scss/components/_Banner.scss
+++ b/src/client/scss/components/_Banner.scss
@@ -3,5 +3,6 @@
 		display: block;
 		width: 100%;
 		height: 100%;
+		object-fit: cover;
 	}
 }
